Mostly finished with Labs 8 and 9- still need TBB implementations for both :(

--- a/labs/lab9/Makefile
+++ b/labs/lab9/Makefile
@@ -1,4 +1,4 @@
-all: starhole_serial starhole_cilk starhole_openmp
+all: starhole_serial starhole_cilk starhole_openmp starhole_tbb
 
 starhole_serial: starhole_serial.cpp
 	icpc -g -std=c++11 -o starhole_serial starhole_serial.cpp -Wall -Wextra -lopencv_core -lopencv_highgui -lm
@@ -9,7 +9,9 @@ starhole_cilk: starhole_cilk.cpp
 starhole_openmp: starhole_openmp.cpp
 	icpc -g -std=c++11 -o starhole_openmp starhole_openmp.cpp -Wall -Wextra -lopencv_core -lopencv_highgui -lm -fopenmp
 
+starhole_tbb: starhole_tbb.cpp
+	icpc -g -std=c++11 -o starhole_tbb starhole_tbb.cpp -Wall -Wextra -lopencv_core -lopencv_highgui -lm -ltbb
+
 clean:
-	rm -f *.o starhole_serial starhole_openmp starhole_cilk
-	
+	rm -f *.o starhole_serial starhole_openmp starhole_cilk starhole_tbb	
 .PHONY: clean
